# peican

./: .gitignore  architecture.md  architecture_v11_increment.md  main.py  pyproject.toml
.github/workflows/: build-apk.yml
.workbuddy/memory/: 2026-07-20.md  2026-07-21.md  2026-07-23.md
app/: __init__.py  config.py  database.py  nav.py  theme.py
app/data/: __init__.py  seed_dishes.py  seed_ingredients.py  seed_loader.py  seed_solar.py
app/models/: __init__.py  dish.py  ingredient.py  member.py  solar.py  template.py
app/pages/: __init__.py  banquet_page.py  diner_select_page.py  dish_detail_page.py  dish_library_page.py  home_page.py  meal_config_page.py  member_page.py  result_page.py  shopping_page.py  solar_page.py  splash_page.py  template_page.py
app/services/: __init__.py  age_service.py  env_service.py  meal_planner.py  member_service.py  shopping_service.py
docs/: class-diagram.mermaid  sequence-diagram.mermaid
tests/: test_core.py
